--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>actividades javascript</title>
     <script src="clase.js"></script>
+    <!-- <script src="E-1 1842.js"></script> -->
 </head>
 <body>
     
