--- a/E-2 1842/Actividad18.html
+++ b/E-2 1842/Actividad18.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad 18</title>
     <script src="actividades.js"></script>
     <link rel="stylesheet" href="estilo_e2.css">
 </head>
