--- a/E-2 1842/index_e2.html
+++ b/E-2 1842/index_e2.html
@@ -37,7 +37,12 @@
         <button onclick="actividad16()"><span>ACTIVIDAD 16</span> //Elementos arrays</button>
         <button onclick="actividad17()"><span>ACTIVIDAD 17</span> //Array split</button>
         <button onclick="actividad18()"><a href="Actividad18.html"><span>ACTIVIDAD 18</span> //Datos Alumnos</button></a>
-       
+        <button onclick="actividad19()"><span>ACTIVIDAD 19</span> //</button>
+        <button onclick="actividad20()"><span>ACTIVIDAD 20</span> //</button>
+        <button onclick="actividad21()"><a href="actividad21.html"><span>ACTIVIDAD 21</span> //Validacion de formulario</button></a>
+        <button onclick="actividad22()"><a href="actividad22.html"><span>ACTIVIDAD 22</span> // Local storage</button></a>
+
+        
     </div>
 
     <div>
