--- a/FINAL UF-1842/curso.html
+++ b/FINAL UF-1842/curso.html
@@ -39,15 +39,18 @@
           <img src="" alt="">
           <h4>OFERTA FORMATIVA</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis magni unde impedit at ipsa ab beatae minus deserunt totam rem eligendi optio sapiente, accusamus suscipit excepturi quibusdam </p>
-          <div><button><a href="curso.html">INFORMACION</a></button></div>
+          <div>
+            <button><a href="curso.html">INFORMACION</a></button>
+          </div>
         </section>
       </div>
         
       <section class="informacion">
-           <img src="imagenes/imagen-curso.jpg"alt="informacion" width="100%" height="500px">
-          <h1>Entra en nuestra academia</h1>
-          <p>Crea tu itinerario formativo</p>
-          <button type="submit">INFORMACION</button>
+           <!-- <img src="imagenes/imagen-curso.jpg"alt="informacion" width="100%" height="500px"> -->
+           <video src="imagenes/VideoClase.mp4" width="100%" height="500px" controls></video>
+          <!-- <h1>Entra en nuestra academia</h1> -->
+          <p>MIRA NUESTRO VIDEO</p>
+          <!-- <button type="submit">INFORMACION</button> -->
    
       </section>
     </section>
