--- a/FINAL UF-1842/index.html
+++ b/FINAL UF-1842/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FINAL UF-1842</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="contacto.css">
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="jquery.js"></script>
 </head>
 <body>
-
+                    
     <header>
 
         <div> <img src="imagenes/Captura.PNG" alt="logo manuel"></div>
@@ -44,7 +47,7 @@
          <img src="imagenes/imagen-curso.jpg"alt="informacion" width="100%" height="500px">
         <h1>Entra en nuestra academia</h1>
         <p>Crea tu itinerario formativo</p>
-        <button type="submit">INFORMACION</button>
+        <button class="boton">INFORMACION</button>
  
     </section>
   </section>
