--- a/EJERCICIOS/uf-1844/110823-act-2/index.html
+++ b/EJERCICIOS/uf-1844/110823-act-2/index.html
@@ -26,9 +26,9 @@
 
         <button id="acceso">ACCESO</button>
         <button id="registro">REGISTRO</button>
-        <button class="informacion">INFORMACION</button>
-        <button class="curso">CURSO</button>
-        <button class="contacto">CONTACTO</button>
+        <button id="informacion">INFORMACION</button>
+        <button id="curso">CURSO</button>
+        <button id="contacto">CONTACTO</button>
 
     </header>
 
@@ -84,13 +84,18 @@
               </div>
                
         </div>
-        <div id="acciones"></div>
-        <div id="acciones1"></div>
-        <!-- <div id="acciones2"></div>
-        <div id="acciones3"></div>
-        <div id="acciones4"></div> -->
 
+      <div class="prueba">
+        <div id="acciones"> </div>
+        <div id="acciones1"></div>
+        <div id="acciones2"></div>
+        <div id="acciones3"></div>
+        <div id="acciones4"></div>
+      </div>
+    
     </section>
+
+
 
     <footer>
       <div>
